# TIPE

./: .gitignore  README.md  compile.bat  controller.c  mGBASocketServer.lua  main.cpp  map.c  pilot_model.cpp  readme.md
mGBA-interface/: CMakeLists.txt  README.md
mGBA-interface/examples/: intel_gatherer.c  map_viewer.c  simple_controller.c
mGBA-interface/include/: mgba_connection.h  mgba_controller.h  mgba_intel.h  mgba_interactions.h  mgba_map.h
mGBA-interface/src/: mgba_connection.c  mgba_controller.c  mgba_intel.c  mgba_interactions.c  mgba_map.c
src/: AST.h
